:bug: overflow visible top

--- a/communes-1/public/css/style_bandeau.css
+++ b/communes-1/public/css/style_bandeau.css
@@ -1,5 +1,6 @@
 .top {
 	position: relative;
+	overflow: visible;
 	background-color: #75BE8F;
 	display: flex;
 	height: 7vh;
